This should address issue #17 by updating the Elastalert docker container base to version 2.0.0

--- a/elastalert/config/config.json
+++ b/elastalert/config/config.json
@@ -1,6 +1,7 @@
 {
   "appName": "elastalert-server",
   "port": 3030,
+  "wsport": 3333,
   "elastalertPath": "/opt/elastalert",
   "verbose": false,
   "es_debug": false,
