--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,10 +31,10 @@ x-curator-variables: &curator-variables
   # for managing automatic closing of older Elasticsearch indices (to conserve memory)
   CURATOR_CLOSE_UNITS : years
   CURATOR_CLOSE_COUNT : 5
-  # for managing automatic deleting of older Elasticsearch indices (to reduce disk consumtion)
+  # for managing automatic deleting of older Elasticsearch indices (to reduce disk consumption)
   CURATOR_DELETE_UNITS : years
   CURATOR_DELETE_COUNT : 99
-  # for managing automatic deleting of Elasticsearch indices based on cumulative size (to reduce disk consumtion)
+  # for managing automatic deleting of Elasticsearch indices based on cumulative size (to reduce disk consumption)
   CURATOR_DELETE_GIGS : 1000000
 
 x-common-upload-variables: &common-upload-variables
