In the snapshot action for the curator, ignore empty lists

--- a/curator/config/action_file.yml
+++ b/curator/config/action_file.yml
@@ -15,6 +15,7 @@ actions:
       partial: False
       wait_for_completion: True
       skip_repo_fs_check: False
+      ignore_empty_list: True
       timeout_override:
       continue_if_exception: True
       disable_action: False
