--- a/curator/config/action_file.yml
+++ b/curator/config/action_file.yml
@@ -2,9 +2,7 @@ actions:
   1:
     action: snapshot
     description: >-
-       Store a snapshot in ${CURATOR_SNAPSHOT_REPO:logs} of indices older than
-       ${CURATOR_SNAPSHOT_COUNT:5} ${CURATOR_SNAPSHOT_UNITS:years} (based on index name),
-       for sessions2-prefixed indices.
+       Store a snapshot in ${CURATOR_SNAPSHOT_REPO:logs} of the previous day's indices.
        Ignore the error if the filter does not result in an actionable list of indices
        (ignore_empty_list) and exit cleanly.
     options:
@@ -18,19 +16,19 @@ actions:
       ignore_empty_list: True
       timeout_override:
       continue_if_exception: True
-      disable_action: False
+      disable_action: ${CURATOR_SNAPSHOT_DISABLED:True}
     filters:
     - filtertype: pattern
       kind: prefix
       value: sessions2-
       exclude:
-    - filtertype: age
-      source: name
-      direction: older
+    - filtertype: period
+      period_type: relative
+      source: ${CURATOR_TIME_SOURCE:creation_date}
       timestring: '%y%m%d'
-      unit: ${CURATOR_SNAPSHOT_UNITS:years}
-      unit_count: ${CURATOR_SNAPSHOT_COUNT:5}
-      exclude:
+      range_from: -1
+      range_to: -1
+      unit: days
   2:
     action: delete_indices
     description: >-
@@ -51,7 +49,7 @@ actions:
     - filtertype: space
       disk_space: ${CURATOR_DELETE_GIGS:1000000}
       use_age: True
-      source: name
+      source: ${CURATOR_TIME_SOURCE:name}
       timestring: '%y%m%d'
       exclude:
   3:
@@ -72,7 +70,7 @@ actions:
       value: sessions2-
       exclude:
     - filtertype: age
-      source: name
+      source: ${CURATOR_TIME_SOURCE:name}
       direction: older
       timestring: '%y%m%d'
       unit: ${CURATOR_DELETE_UNITS:years}
@@ -96,7 +94,7 @@ actions:
       value: sessions2-
       exclude:
     - filtertype: age
-      source: name
+      source: ${CURATOR_TIME_SOURCE:name}
       direction: older
       timestring: '%y%m%d'
       unit: ${CURATOR_CLOSE_UNITS:years}
