--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -30,6 +30,8 @@ x-kibana-variables: &kibana-variables
   KIBANA_OFFLINE_REGION_MAPS : 'true'
 
 x-curator-variables: &curator-variables
+  # get index dates from actual date index was created (creation_date) vs. extracted from index name (name)
+  CURATOR_TIME_SOURCE : 'name'
   # for managing automatic closing of older Elasticsearch indices (to conserve memory)
   CURATOR_CLOSE_UNITS : years
   CURATOR_CLOSE_COUNT : 10
@@ -39,12 +41,11 @@ x-curator-variables: &curator-variables
   # for managing automatic deleting of Elasticsearch indices based on cumulative size (to reduce disk consumption)
   CURATOR_DELETE_GIGS : 1000000
   # for managing automatic snapshots of Elasticsearch indices
-  CURATOR_SNAPSHOT_UNITS : years
-  CURATOR_SNAPSHOT_COUNT : 5
+  CURATOR_SNAPSHOT_DISABLED : 'True'
   # name of Elasticsearch snapshot repository under path.repo
   CURATOR_SNAPSHOT_REPO : 'logs'
   # controls compression of Elasticsearch snapshots managed by the curator
-  CURATOR_SNAPSHOTS_COMPRESSED : 'false'
+  CURATOR_SNAPSHOT_COMPRESSED : 'false'
 
 x-common-upload-variables: &common-upload-variables
   AUTO_TAG : 'true'
