don't force pre-set username, allow .desktop scripts to be run from whatever home directory

--- a/iso-build/config/includes.chroot/etc/skel/Desktop/start.desktop
+++ b/iso-build/config/includes.chroot/etc/skel/Desktop/start.desktop
@@ -1,7 +1,7 @@
 #!/usr/bin/env xdg-open
 [Desktop Entry]
 Name=Start Malcolm
-Exec=lxterminal --command=/bin/bash\ -l\ /home/analyst/Malcolm/scripts/start.sh
+Exec=lxterminal --command=/bin/bash\ -l\ -c\ ~/Malcolm/scripts/start.sh
 Comment=Start Malcolm
 Terminal=false
 Type=Application
