--- a/iso-build/config/includes.chroot/etc/skel/Desktop/stop.desktop
+++ b/iso-build/config/includes.chroot/etc/skel/Desktop/stop.desktop
@@ -1,7 +1,7 @@
 #!/usr/bin/env xdg-open
 [Desktop Entry]
 Name=Stop Malcolm
-Exec=lxterminal --command=/bin/bash\ -l\ /home/analyst/Malcolm/scripts/stop.sh
+Exec=lxterminal --command=/bin/bash\ -l\ -c\ ~/Malcolm/scripts/stop.sh
 Comment=Stop Malcolm
 Terminal=false
 Type=Application
