--- a/iso-build/config/includes.binary/install/preseed.cfg
+++ b/iso-build/config/includes.binary/install/preseed.cfg
@@ -9,8 +9,8 @@ d-i time/zone string Universal
 d-i clock-setup/ntp boolean true
 d-i clock-setup/ntp-server string 0.debian.pool.ntp.org
 
-d-i passwd/username string analyst
-d-i passwd/user-fullname string analyst
+# d-i passwd/username string analyst
+# d-i passwd/user-fullname string analyst
 d-i passwd/user-default-groups string audio cdrom video netdev plugdev docker
 d-i passwd/root-login boolean true
 
