--- a/iso-build/config/includes.chroot/etc/skel/Desktop/logs.desktop
+++ b/iso-build/config/includes.chroot/etc/skel/Desktop/logs.desktop
@@ -1,7 +1,7 @@
 #!/usr/bin/env xdg-open
 [Desktop Entry]
 Name=Malcolm Debug Logs
-Exec=lxterminal --command=/bin/bash\ -l\ /home/analyst/Malcolm/scripts/logs.sh
+Exec=lxterminal --command=/bin/bash\ -l\ -c\ ~/Malcolm/scripts/logs.sh
 Comment=Monitor the debug output of Malcolm containers
 Terminal=false
 Type=Application
