added advanced configuration install option; default screensaver to 'lock'

--- a/iso-build/config/includes.binary/boot/grub/grub.cfg
+++ b/iso-build/config/includes.binary/boot/grub/grub.cfg
@@ -20,17 +20,22 @@ insmod play
 play 960 440 1 0 4 440 1
 
 menuentry "Live system" {
-  linux /live/vmlinuz boot=live components username=analyst nosplash persistence persistence-encryption=none,luks elevator=deadline cgroup_enable=memory swapaccount=1 cgroup.memory=nokmem ipv6.disable=1
+  linux /live/vmlinuz boot=live components username=analyst nosplash persistence persistence-encryption=none,luks elevator=deadline cgroup_enable=memory swapaccount=1 cgroup.memory=nokmem
   initrd  /live/initrd.img
 }
 
-menuentry "Install Malcolm Base" {
-  linux /install/vmlinuz auto=true priority=high vga=normal locales=en_US.UTF-8 keyboard-layouts=us ipv6.disable=1 preseed/file=/cdrom/install/preseed.cfg
+menuentry "Install Malcolm Base (quick install)" {
+  linux /install/vmlinuz auto=true priority=high vga=normal locales=en_US.UTF-8 keyboard-layouts=us preseed/file=/cdrom/install/preseed.cfg
   initrd  /install/initrd.gz
 }
 
-menuentry "Install Malcolm Base (encrypted)" {
-  linux /install/vmlinuz auto=true priority=high vga=normal locales=en_US.UTF-8 keyboard-layouts=us ipv6.disable=1 preseed/file=/cdrom/install/preseed_crypto.cfg
+menuentry "Install Malcolm Base (encrypted quick install)" {
+  linux /install/vmlinuz auto=true priority=high vga=normal locales=en_US.UTF-8 keyboard-layouts=us preseed/file=/cdrom/install/preseed_crypto.cfg
+  initrd  /install/initrd.gz
+}
+
+menuentry "Install Malcolm Base (advanced configuration)" {
+  linux /install/vmlinuz auto=true priority=high vga=normal preseed/file=/cdrom/install/preseed_minimal.cfg
   initrd  /install/initrd.gz
 }
 
