working on making malcolm iso buster-based

--- a/iso-build/config/includes.binary/install/preseed.cfg
+++ b/iso-build/config/includes.binary/install/preseed.cfg
@@ -22,6 +22,7 @@ d-i grub-installer/with_other_os boolean true
 
 d-i partman-auto/method string lvm
 d-i partman-auto-lvm/new_vg_name string main
+d-i partman-auto-lvm/guided_size string max
 
 d-i partman-lvm/device_remove_lvm boolean true
 d-i partman-lvm/confirm boolean true
