--- a/iso-build/config/includes.binary/install/preseed_base.cfg
+++ b/iso-build/config/includes.binary/install/preseed_base.cfg
@@ -20,10 +20,9 @@ d-i apt-setup/use_mirror boolean false
 d-i finish-install/reboot_in_progress note
 
 d-i preseed/late_command string \
-  echo 'deb http://deb.debian.org/debian stretch main contrib non-free' > /target/etc/apt/sources.list; \
-  echo 'deb http://security.debian.org/debian-security stretch/updates main contrib non-free' >> /target/etc/apt/sources.list; \
-  echo 'deb http://deb.debian.org/debian stretch-updates main contrib non-free' >> /target/etc/apt/sources.list; \
-  echo 'deb http://deb.debian.org/debian stretch-backports main contrib non-free' >> /target/etc/apt/sources.list; \
+  echo 'deb http://deb.debian.org/debian buster main contrib non-free' > /target/etc/apt/sources.list; \
+  echo 'deb http://security.debian.org/debian-security buster/updates main contrib non-free' >> /target/etc/apt/sources.list; \
+  echo 'deb http://deb.debian.org/debian buster-updates main contrib non-free' >> /target/etc/apt/sources.list; \
   in-target bash /usr/local/bin/agg-init.sh; \
   in-target sed -r -i 's@(^.+\s+/(home|tmp)\s+ext4\s+.*defaults)@\1,nosuid@g' /etc/fstab; \
   in-target sed -i 's#^\(GRUB_CMDLINE_LINUX_DEFAULT="quiet\)"$#\1 elevator=deadline cgroup_enable=memory swapaccount=1 cgroup.memory=nokmem apparmor=1 security=apparmor"#' /etc/default/grub; \
