--- a/iso-build/vagrant/Vagrantfile
+++ b/iso-build/vagrant/Vagrantfile
@@ -4,7 +4,7 @@ end
 
 Vagrant.configure("2") do |config|
 
-  config.vm.box = "bento/debian-9"
+  config.vm.box = "bento/debian-10"
 
   config.vm.network "private_network", type: "dhcp"
 
@@ -24,20 +24,18 @@ Vagrant.configure("2") do |config|
     apt-get update
     apt-get dist-upgrade -y
     sed -i "s/main/main contrib non-free/g" /etc/apt/sources.list
-    echo "deb http://httpredir.debian.org/debian/ stretch-backports main contrib non-free" >> /etc/apt/sources.list
-    echo "deb-src http://httpredir.debian.org/debian/ stretch-backports main contrib non-free" >> /etc/apt/sources.list
     apt-get update
     export KERNEL_VERSION=$(apt-cache search linux-image-4 | grep -Pv -- '(-(rt|cloud)-amd64|amd64-(dbg|unsigned))' | sort -r --sort=version | awk '{print $1}' | head -n 1 | sed 's/^linux-image-//' | sed 's/-amd64$//')
-    apt-get install -y -t stretch-backports \
+    apt-get install -y \
       linux-image-$KERNEL_VERSION-amd64 linux-headers-$KERNEL_VERSION-amd64 linux-headers-$KERNEL_VERSION-common \
-      dkms build-essential linux-kbuild-4.19 linux-compiler-gcc-6-x86 \
+      dkms build-essential linux-kbuild-4.19 linux-compiler-gcc-8-x86 \
       firmware-linux firmware-linux-nonfree firmware-misc-nonfree firmware-amd-graphics
   STEP1
   config.vm.provision :reload
 
   config.vm.provision "shell", inline: <<-STEP2
     apt-get update
-    apt-get install -y -t stretch-backports \
+    apt-get install -y \
       rsync git live-build debootstrap xorriso squashfs-tools genisoimage pandoc imagemagick
   STEP2
 end
