--- a/docker-compose-standalone-zeek-live.yml
+++ b/docker-compose-standalone-zeek-live.yml
@@ -77,6 +77,7 @@ x-pcap-capture-variables: &pcap-capture-variables
 services:
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.8.1
+    restart: "no"
     hostname: elasticsearch
     environment:
       bootstrap.memory_lock : 'true'
@@ -105,6 +106,7 @@ services:
       - ./elasticsearch-backup:/opt/elasticsearch/backup:delegated
   kibana:
     image: malcolmnetsec/kibana-oss:1.3.2
+    restart: "no"
     hostname: kibana
     environment:
       << : *kibana-variables
@@ -127,6 +129,7 @@ services:
         start_period: 200s
   elastalert:
     image: malcolmnetsec/elastalert:1.3.2
+    restart: "no"
     hostname: elastalert
     environment:
       ELASTICSEARCH_URL : 'http://elasticsearch:9200'
@@ -150,6 +153,7 @@ services:
       - ./elastalert/rules/:/opt/elastalert/rules/
   curator:
     image: malcolmnetsec/curator:1.3.2
+    restart: "no"
     hostname: curator
     environment:
       << : *curator-variables
@@ -159,6 +163,7 @@ services:
       - elasticsearch
   logstash:
     image: malcolmnetsec/logstash-oss:1.3.2
+    restart: "no"
     hostname: logstash
     environment:
       << : *logstash-variables
@@ -186,6 +191,7 @@ services:
       - ./host-map.txt:/usr/share/logstash/config/host-map.txt:ro
   filebeat:
     image: malcolmnetsec/filebeat-oss:1.3.2
+    restart: "no"
     hostname: filebeat
     environment:
       << : *common-upload-variables
@@ -210,6 +216,7 @@ services:
       - ./filebeat/certs/client.key:/certs/client.key:ro
   moloch:
     image: malcolmnetsec/moloch:1.3.2
+    restart: "no"
     hostname: moloch
     env_file:
       - ./auth.env
@@ -242,6 +249,7 @@ services:
       - ./moloch-raw:/data/moloch/raw
   file-monitor:
     image: malcolmnetsec/file-monitor:1.3.2
+    restart: "no"
     hostname: filemon
     environment:
       << : *zeek-file-extraction-variables
@@ -252,6 +260,7 @@ services:
       - ./zeek-logs/current:/data/zeek/logs
   pcap-capture:
     image: malcolmnetsec/pcap-capture:1.3.2
+    restart: "no"
     network_mode: host
     ulimits:
       memlock:
@@ -268,6 +277,7 @@ services:
       - ./pcap/upload:/pcap
   upload:
     image: malcolmnetsec/file-upload:1.3.2
+    restart: "no"
     hostname: upload
     env_file:
       - ./auth.env
@@ -284,6 +294,7 @@ services:
       - ./pcap/upload:/var/www/upload/server/php/chroot/files
   nginx-proxy:
     image: malcolmnetsec/nginx-proxy:1.3.2
+    restart: "no"
     hostname: nginx-proxy
     depends_on:
       - moloch
