--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,6 +77,7 @@ x-pcap-capture-variables: &pcap-capture-variables
 services:
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.8.1
+    restart: "no"
     hostname: elasticsearch
     environment:
       bootstrap.memory_lock : 'true'
@@ -108,6 +109,7 @@ services:
       context: .
       dockerfile: Dockerfiles/kibana.Dockerfile
     image: malcolmnetsec/kibana-oss:1.3.2
+    restart: "no"
     hostname: kibana
     environment:
       << : *kibana-variables
@@ -133,6 +135,7 @@ services:
       context: .
       dockerfile: Dockerfiles/elastalert.Dockerfile
     image: malcolmnetsec/elastalert:1.3.2
+    restart: "no"
     hostname: elastalert
     environment:
       ELASTICSEARCH_URL : 'http://elasticsearch:9200'
@@ -159,6 +162,7 @@ services:
       context: .
       dockerfile: Dockerfiles/curator.Dockerfile
     image: malcolmnetsec/curator:1.3.2
+    restart: "no"
     hostname: curator
     environment:
       << : *curator-variables
@@ -173,6 +177,7 @@ services:
       context: .
       dockerfile: Dockerfiles/logstash.Dockerfile
     image: malcolmnetsec/logstash-oss:1.3.2
+    restart: "no"
     hostname: logstash
     environment:
       << : *logstash-variables
@@ -210,6 +215,7 @@ services:
       context: .
       dockerfile: Dockerfiles/filebeat.Dockerfile
     image: malcolmnetsec/filebeat-oss:1.3.2
+    restart: "no"
     hostname: filebeat
     environment:
       << : *common-upload-variables
@@ -238,6 +244,7 @@ services:
       context: .
       dockerfile: Dockerfiles/moloch.Dockerfile
     image: malcolmnetsec/moloch:1.3.2
+    restart: "no"
     hostname: moloch
     env_file:
       - ./auth.env
@@ -276,6 +283,7 @@ services:
       context: .
       dockerfile: Dockerfiles/file-monitor.Dockerfile
     image: malcolmnetsec/file-monitor:1.3.2
+    restart: "no"
     hostname: filemon
     environment:
       << : *zeek-file-extraction-variables
@@ -289,6 +297,7 @@ services:
       context: .
       dockerfile: Dockerfiles/pcap-capture.Dockerfile
     image: malcolmnetsec/pcap-capture:1.3.2
+    restart: "no"
     network_mode: host
     ulimits:
       memlock:
@@ -308,6 +317,7 @@ services:
       context: .
       dockerfile: Dockerfiles/file-upload.Dockerfile
     image: malcolmnetsec/file-upload:1.3.2
+    restart: "no"
     hostname: upload
     env_file:
       - ./auth.env
@@ -327,6 +337,7 @@ services:
       context: .
       dockerfile: Dockerfiles/nginx.Dockerfile
     image: malcolmnetsec/nginx-proxy:1.3.2
+    restart: "no"
     hostname: nginx-proxy
     depends_on:
       - moloch
