--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,6 +30,10 @@ http {
     server upload:80;
   }
 
+  upstream docker-htadmin {
+    server htadmin:80;
+  }
+
   upstream docker-kibana {
     server kibana:5601;
   }
@@ -48,6 +52,20 @@ http {
 
   upstream docker-logstash-stats {
     server logstash:9600;
+  }
+
+  # htadmin (htpasswd/user management)
+  server {
+    listen 488;
+    ssl on;
+    ssl_certificate /etc/nginx/certs/cert.pem;
+    ssl_certificate_key /etc/nginx/certs/key.pem;
+
+    location / {
+      proxy_pass http://docker-htadmin;
+      proxy_redirect off;
+      proxy_set_header Host htadmin.malcolm.local;
+    }
   }
 
   # Moloch interface
