--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ version: '3.7'
 #-------------------------------------------------------------------------------
 x-moloch-variables: &moloch-variables
   # INITIALIZEDB should be 'true' on Moloch's first execution, and 'false' every other time
-  INITIALIZEDB : 'false'
+  INITIALIZEDB : 'true'
   MANAGE_PCAP_FILES : 'false'
   ZEEK_AUTO_ANALYZE_PCAP_FILES : 'true'
   MOLOCH_ANALYZE_PCAP_THREADS : 1
@@ -332,6 +332,21 @@ services:
       - 127.0.0.1:8022:22
     volumes:
       - ./pcap/upload:/var/www/upload/server/php/chroot/files
+  htadmin:
+    image: malcolmnetsec/htadmin:1.3.2
+    build:
+      context: .
+      dockerfile: Dockerfiles/htadmin.Dockerfile
+    restart: "no"
+    hostname: htadmin
+    environment:
+      VIRTUAL_HOST : 'htadmin.malcolm.local'
+    expose:
+      - 80
+    volumes:
+      - ./htadmin/config.ini:/var/www/htadmin/config/config.ini:rw
+      - ./htadmin/metadata:/var/www/htadmin/config/metadata:rw
+      - ./nginx/htpasswd:/var/www/htadmin/config/htpasswd:rw
   nginx-proxy:
     build:
       context: .
@@ -343,8 +358,10 @@ services:
       - moloch
       - kibana
       - upload
+      - htadmin
     ports:
       - "443:443"
+      - "488:488"
       - "3030:3030"
       - "5601:5601"
       - "8443:8443"
