--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -120,9 +120,7 @@ http {
       proxy_set_header Host moloch.malcolm.local;
       proxy_set_header http_auth_http_user $remote_user;
       proxy_set_header Authorization "";
-      # Create Moloch users on-the-fly based on header authenticaiton (see https://github.com/aol/moloch/issues/1095 and https://github.com/aol/moloch/pull/1120)
-      # (not sure if I need this:) proxy_set_header userNameHeader http_auth_http_user;
-      proxy_set_header userAutoCreateTmpl '{"userId": "$remote_user", "userName": "$remote_user", "enabled": true, "createEnabled": false, "webEnabled": true, "headerAuthEnabled": true, "emailSearch": true, "removeEnabled": false, "packetSearch": true }';
+      proxy_set_header UserGroup MALCOLM_MOLOCH_ACCESS;
     }
   }
 
