more work on multi-user auto creation with moloch

--- a/moloch/etc/config.ini
+++ b/moloch/etc/config.ini
@@ -28,7 +28,10 @@ rirFile=/data/moloch/etc/ipv4-address-space.csv
 ouiFile=/data/moloch/etc/oui.txt
 dropUser=nobody
 dropGroup=daemon
-userNameHeader=moloch_user
+userNameHeader=http_auth_http_user
+userAutoCreateTmpl={"userId": "${this.http_auth_http_user}", "userName": "${this.http_auth_http_user}", "enabled": true, "createEnabled": false, "webEnabled": true, "headerAuthEnabled": true, "emailSearch": true, "removeEnabled": false, "packetSearch": true }
+requiredAuthHeader=UserGroup
+requiredAuthHeaderVal=MALCOLM_MOLOCH_ACCESS
 parseSMTP=true
 parseSMB=true
 parseQSValue=false
