--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,6 +77,7 @@ x-pcap-capture-variables: &pcap-capture-variables
 services:
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.8.1
+    restart: "no"
     hostname: elasticsearch
     environment:
       bootstrap.memory_lock : 'true'
@@ -107,7 +108,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/kibana.Dockerfile
-    image: malcolmnetsec/kibana-oss:1.3.1
+    image: malcolmnetsec/kibana-oss:1.3.2
+    restart: "no"
     hostname: kibana
     environment:
       << : *kibana-variables
@@ -132,7 +134,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/elastalert.Dockerfile
-    image: malcolmnetsec/elastalert:1.3.1
+    image: malcolmnetsec/elastalert:1.3.2
+    restart: "no"
     hostname: elastalert
     environment:
       ELASTICSEARCH_URL : 'http://elasticsearch:9200'
@@ -158,7 +161,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/curator.Dockerfile
-    image: malcolmnetsec/curator:1.3.1
+    image: malcolmnetsec/curator:1.3.2
+    restart: "no"
     hostname: curator
     environment:
       << : *curator-variables
@@ -172,7 +176,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/logstash.Dockerfile
-    image: malcolmnetsec/logstash-oss:1.3.1
+    image: malcolmnetsec/logstash-oss:1.3.2
+    restart: "no"
     hostname: logstash
     environment:
       << : *logstash-variables
@@ -209,7 +214,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/filebeat.Dockerfile
-    image: malcolmnetsec/filebeat-oss:1.3.1
+    image: malcolmnetsec/filebeat-oss:1.3.2
+    restart: "no"
     hostname: filebeat
     environment:
       << : *common-upload-variables
@@ -237,7 +243,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/moloch.Dockerfile
-    image: malcolmnetsec/moloch:1.3.1
+    image: malcolmnetsec/moloch:1.3.2
+    restart: "no"
     hostname: moloch
     env_file:
       - ./auth.env
@@ -275,7 +282,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/file-monitor.Dockerfile
-    image: malcolmnetsec/file-monitor:1.3.1
+    image: malcolmnetsec/file-monitor:1.3.2
+    restart: "no"
     hostname: filemon
     environment:
       << : *zeek-file-extraction-variables
@@ -288,7 +296,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/pcap-capture.Dockerfile
-    image: malcolmnetsec/pcap-capture:1.3.1
+    image: malcolmnetsec/pcap-capture:1.3.2
+    restart: "no"
     network_mode: host
     ulimits:
       memlock:
@@ -307,7 +316,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/file-upload.Dockerfile
-    image: malcolmnetsec/file-upload:1.3.1
+    image: malcolmnetsec/file-upload:1.3.2
+    restart: "no"
     hostname: upload
     env_file:
       - ./auth.env
@@ -326,7 +336,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/nginx.Dockerfile
-    image: malcolmnetsec/nginx-proxy:1.3.1
+    image: malcolmnetsec/nginx-proxy:1.3.2
+    restart: "no"
     hostname: nginx-proxy
     depends_on:
       - moloch
