multiple user accounts and account management (#39)
* bump version for next point release

* increase length of self-signed cert

* Prompt during installation for whether or not to disable IPv6

* In the Kibana Software dashboard pie chart, don't exclude software for which a version is unknown

* Allow Malcolm to be restarted automatically upon docker daemon restart

* sync malcolm and iso installer

* working on using htadmin as a user management frontend

* working more on account management

* working on multiple users

* tweak nginx according to https://github.com/aol/moloch/pull/1120

* more work on multi-user auto creation with moloch

* more work on multi-user auto creation with moloch

* more work on multi-user auto creation with moloch

* more work on multi-user auto creation with moloch

* bump version, udpate README for account management

* Improved comments for zeeklogs wise data source

* added user desktop file for malcolm iso

* create missing htadmin directory in iso build

* relocate icons for malcolm from desktop

* BIOS ISO is kind of busted at the moment anyway as far as preseeding goes, so for now just install the EFI bootloader.

* fix read permissions for group/world on htpasswd file for nginx processes

* A couple fixes for the iso: 1) disable some callback features in chromium via policy, 2) let wicd manage networking

* When running auth_setup.sh to reset the administrator password, don't blow away the other passwords in the database

* working on using htadmin as a user management frontend

* working on multiple users

* tweak nginx according to https://github.com/aol/moloch/pull/1120

* more work on multi-user auto creation with moloch

* more work on multi-user auto creation with moloch

* added user desktop file for malcolm iso

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,6 +30,10 @@ http {
     server upload:80;
   }
 
+  upstream docker-htadmin {
+    server htadmin:80;
+  }
+
   upstream docker-kibana {
     server kibana:5601;
   }
@@ -48,6 +52,20 @@ http {
 
   upstream docker-logstash-stats {
     server logstash:9600;
+  }
+
+  # htadmin (htpasswd/user management)
+  server {
+    listen 488;
+    ssl on;
+    ssl_certificate /etc/nginx/certs/cert.pem;
+    ssl_certificate_key /etc/nginx/certs/key.pem;
+
+    location / {
+      proxy_pass http://docker-htadmin;
+      proxy_redirect off;
+      proxy_set_header Host htadmin.malcolm.local;
+    }
   }
 
   # Moloch interface
@@ -100,7 +118,7 @@ http {
       proxy_pass http://docker-moloch;
       proxy_redirect off;
       proxy_set_header Host moloch.malcolm.local;
-      proxy_set_header MOLOCH_USER $remote_user;
+      proxy_set_header http_auth_http_user $remote_user;
       proxy_set_header Authorization "";
     }
   }
