--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -105,7 +105,7 @@ services:
       - ./elasticsearch:/usr/share/elasticsearch/data:delegated
       - ./elasticsearch-backup:/opt/elasticsearch/backup:delegated
   kibana:
-    image: malcolmnetsec/kibana-oss:1.3.2
+    image: malcolmnetsec/kibana-oss:1.4.0
     restart: "no"
     hostname: kibana
     environment:
@@ -128,7 +128,7 @@ services:
         retries: 3
         start_period: 200s
   elastalert:
-    image: malcolmnetsec/elastalert:1.3.2
+    image: malcolmnetsec/elastalert:1.4.0
     restart: "no"
     hostname: elastalert
     environment:
@@ -152,7 +152,7 @@ services:
       - ./elastalert/config/config.json:/opt/elastalert-server/config/config.json
       - ./elastalert/rules/:/opt/elastalert/rules/
   curator:
-    image: malcolmnetsec/curator:1.3.2
+    image: malcolmnetsec/curator:1.4.0
     restart: "no"
     hostname: curator
     environment:
@@ -162,7 +162,7 @@ services:
     depends_on:
       - elasticsearch
   logstash:
-    image: malcolmnetsec/logstash-oss:1.3.2
+    image: malcolmnetsec/logstash-oss:1.4.0
     restart: "no"
     hostname: logstash
     environment:
@@ -190,7 +190,7 @@ services:
       - ./cidr-map.txt:/usr/share/logstash/config/cidr-map.txt:ro
       - ./host-map.txt:/usr/share/logstash/config/host-map.txt:ro
   filebeat:
-    image: malcolmnetsec/filebeat-oss:1.3.2
+    image: malcolmnetsec/filebeat-oss:1.4.0
     restart: "no"
     hostname: filebeat
     environment:
@@ -215,7 +215,7 @@ services:
       - ./filebeat/certs/client.crt:/certs/client.crt:ro
       - ./filebeat/certs/client.key:/certs/client.key:ro
   moloch:
-    image: malcolmnetsec/moloch:1.3.2
+    image: malcolmnetsec/moloch:1.4.0
     restart: "no"
     hostname: moloch
     env_file:
@@ -248,7 +248,7 @@ services:
       - ./moloch-logs:/data/moloch/logs
       - ./moloch-raw:/data/moloch/raw
   file-monitor:
-    image: malcolmnetsec/file-monitor:1.3.2
+    image: malcolmnetsec/file-monitor:1.4.0
     restart: "no"
     hostname: filemon
     environment:
@@ -259,7 +259,7 @@ services:
       - ./zeek-logs/extract_files:/data/zeek/extract_files
       - ./zeek-logs/current:/data/zeek/logs
   pcap-capture:
-    image: malcolmnetsec/pcap-capture:1.3.2
+    image: malcolmnetsec/pcap-capture:1.4.0
     restart: "no"
     network_mode: host
     ulimits:
@@ -276,7 +276,7 @@ services:
     volumes:
       - ./pcap/upload:/pcap
   upload:
-    image: malcolmnetsec/file-upload:1.3.2
+    image: malcolmnetsec/file-upload:1.4.0
     restart: "no"
     hostname: upload
     env_file:
@@ -292,16 +292,30 @@ services:
       - 127.0.0.1:8022:22
     volumes:
       - ./pcap/upload:/var/www/upload/server/php/chroot/files
+  htadmin:
+    image: malcolmnetsec/htadmin:1.4.0
+    restart: "no"
+    hostname: htadmin
+    environment:
+      VIRTUAL_HOST : 'htadmin.malcolm.local'
+    expose:
+      - 80
+    volumes:
+      - ./htadmin/config.ini:/var/www/htadmin/config/config.ini:rw
+      - ./htadmin/metadata:/var/www/htadmin/config/metadata:rw
+      - ./nginx/htpasswd:/var/www/htadmin/config/htpasswd:rw
   nginx-proxy:
-    image: malcolmnetsec/nginx-proxy:1.3.2
+    image: malcolmnetsec/nginx-proxy:1.4.0
     restart: "no"
     hostname: nginx-proxy
     depends_on:
       - moloch
       - kibana
       - upload
+      - htadmin
     ports:
       - "443:443"
+      - "488:488"
       - "3030:3030"
       - "5601:5601"
       - "8443:8443"
