--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -108,7 +108,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/kibana.Dockerfile
-    image: malcolmnetsec/kibana-oss:1.3.2
+    image: malcolmnetsec/kibana-oss:1.4.0
     restart: "no"
     hostname: kibana
     environment:
@@ -134,7 +134,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/elastalert.Dockerfile
-    image: malcolmnetsec/elastalert:1.3.2
+    image: malcolmnetsec/elastalert:1.4.0
     restart: "no"
     hostname: elastalert
     environment:
@@ -161,7 +161,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/curator.Dockerfile
-    image: malcolmnetsec/curator:1.3.2
+    image: malcolmnetsec/curator:1.4.0
     restart: "no"
     hostname: curator
     environment:
@@ -176,7 +176,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/logstash.Dockerfile
-    image: malcolmnetsec/logstash-oss:1.3.2
+    image: malcolmnetsec/logstash-oss:1.4.0
     restart: "no"
     hostname: logstash
     environment:
@@ -214,7 +214,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/filebeat.Dockerfile
-    image: malcolmnetsec/filebeat-oss:1.3.2
+    image: malcolmnetsec/filebeat-oss:1.4.0
     restart: "no"
     hostname: filebeat
     environment:
@@ -243,7 +243,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/moloch.Dockerfile
-    image: malcolmnetsec/moloch:1.3.2
+    image: malcolmnetsec/moloch:1.4.0
     restart: "no"
     hostname: moloch
     env_file:
@@ -282,7 +282,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/file-monitor.Dockerfile
-    image: malcolmnetsec/file-monitor:1.3.2
+    image: malcolmnetsec/file-monitor:1.4.0
     restart: "no"
     hostname: filemon
     environment:
@@ -296,7 +296,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/pcap-capture.Dockerfile
-    image: malcolmnetsec/pcap-capture:1.3.2
+    image: malcolmnetsec/pcap-capture:1.4.0
     restart: "no"
     network_mode: host
     ulimits:
@@ -316,7 +316,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/file-upload.Dockerfile
-    image: malcolmnetsec/file-upload:1.3.2
+    image: malcolmnetsec/file-upload:1.4.0
     restart: "no"
     hostname: upload
     env_file:
@@ -332,19 +332,36 @@ services:
       - 127.0.0.1:8022:22
     volumes:
       - ./pcap/upload:/var/www/upload/server/php/chroot/files
+  htadmin:
+    image: malcolmnetsec/htadmin:1.4.0
+    build:
+      context: .
+      dockerfile: Dockerfiles/htadmin.Dockerfile
+    restart: "no"
+    hostname: htadmin
+    environment:
+      VIRTUAL_HOST : 'htadmin.malcolm.local'
+    expose:
+      - 80
+    volumes:
+      - ./htadmin/config.ini:/var/www/htadmin/config/config.ini:rw
+      - ./htadmin/metadata:/var/www/htadmin/config/metadata:rw
+      - ./nginx/htpasswd:/var/www/htadmin/config/htpasswd:rw
   nginx-proxy:
     build:
       context: .
       dockerfile: Dockerfiles/nginx.Dockerfile
-    image: malcolmnetsec/nginx-proxy:1.3.2
+    image: malcolmnetsec/nginx-proxy:1.4.0
     restart: "no"
     hostname: nginx-proxy
     depends_on:
       - moloch
       - kibana
       - upload
+      - htadmin
     ports:
       - "443:443"
+      - "488:488"
       - "3030:3030"
       - "5601:5601"
       - "8443:8443"
