tweak config file for remote sensor communication

--- a/moloch/etc/config.ini
+++ b/moloch/etc/config.ini
@@ -7,7 +7,7 @@
 elasticsearch=http://elasticsearch:9200
 cronQueries=true
 rotateIndex=daily
-passwordSecret=admin
+passwordSecret=Malcolm
 httpRealm=Moloch
 interface=eth0
 wiseHost=127.0.0.1
