for issue #42, enable community_id for zeek plugins to populate conn.log

--- a/logstash/pipeline-main/11_zeek_logs.conf
+++ b/logstash/pipeline-main/11_zeek_logs.conf
@@ -98,25 +98,51 @@ filter {
 
       # bitmap conn.log field configuration version 0
       #
-      # both mac + vlan: 0x1ffffff / 33554431
-      # only mac:        0x19fffff / 27262975
-      # only vlan:        0x7fffff /  8388607
-      # neither:          0x1fffff /  2097151
+      # Todo: I need to just bite the bullet and code this up in a Ruby block rather than hardcoding values.
+      #
+      # vlan + mac + community_id:  0x3ffffff / 67108863
+      # vlan + mac:                 0x1ffffff / 33554431
+      # mac + community_id:         0x39fffff / 60817407
+      # mac only:                   0x19fffff / 27262975
+      # vlan + community_id:        0x27fffff / 41943039
+      # vlan only:                   0x7fffff /  8388607
+      # community_id only:           0x1fffff /  2097151
+      # no custom fields:
 
       if ([@metadata][zeek_fields_bitmap_version] == 0) {
 
-        if ([@metadata][zeek_fields_bitmap] == 33554431) {
-          # conn.log has all optional fields (both MACs and VLANs)
+        if ([@metadata][zeek_fields_bitmap] == 67108863) {
+          # conn.log has vlans + macs + community_id
           dissect {
             id => "dissect_zeek_conn_with_all_fields"
+            # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+            mapping => {
+              "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][proto]}	%{[zeek_cols][service]}	%{[zeek_cols][duration]}	%{[zeek_cols][orig_bytes]}	%{[zeek_cols][resp_bytes]}	%{[zeek_cols][conn_state]}	%{[zeek_cols][local_orig]}	%{[zeek_cols][local_resp]}	%{[zeek_cols][missed_bytes]}	%{[zeek_cols][history]}	%{[zeek_cols][orig_pkts]}	%{[zeek_cols][orig_ip_bytes]}	%{[zeek_cols][resp_pkts]}	%{[zeek_cols][resp_ip_bytes]}	%{[zeek_cols][tunnel_parents]}	%{[zeek_cols][vlan]}	%{[zeek_cols][inner_vlan]}	%{[zeek_cols][orig_l2_addr]}	%{[zeek_cols][resp_l2_addr]}	%{[zeek_cols][community_id]}"
+            }
+          }
+
+        } else if ([@metadata][zeek_fields_bitmap] == 33554431) {
+          # conn.log has vlans + macs
+          dissect {
+            id => "dissect_zeek_conn_with_vlan_and_mac_fields"
             # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
             mapping => {
               "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][proto]}	%{[zeek_cols][service]}	%{[zeek_cols][duration]}	%{[zeek_cols][orig_bytes]}	%{[zeek_cols][resp_bytes]}	%{[zeek_cols][conn_state]}	%{[zeek_cols][local_orig]}	%{[zeek_cols][local_resp]}	%{[zeek_cols][missed_bytes]}	%{[zeek_cols][history]}	%{[zeek_cols][orig_pkts]}	%{[zeek_cols][orig_ip_bytes]}	%{[zeek_cols][resp_pkts]}	%{[zeek_cols][resp_ip_bytes]}	%{[zeek_cols][tunnel_parents]}	%{[zeek_cols][vlan]}	%{[zeek_cols][inner_vlan]}	%{[zeek_cols][orig_l2_addr]}	%{[zeek_cols][resp_l2_addr]}"
             }
           }
 
+        } else if ([@metadata][zeek_fields_bitmap] == 60817407) {
+          # conn.log has macs + community_id
+          dissect {
+            id => "dissect_zeek_conn_with_mac_and_community_fields"
+            # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+            mapping => {
+              "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][proto]}	%{[zeek_cols][service]}	%{[zeek_cols][duration]}	%{[zeek_cols][orig_bytes]}	%{[zeek_cols][resp_bytes]}	%{[zeek_cols][conn_state]}	%{[zeek_cols][local_orig]}	%{[zeek_cols][local_resp]}	%{[zeek_cols][missed_bytes]}	%{[zeek_cols][history]}	%{[zeek_cols][orig_pkts]}	%{[zeek_cols][orig_ip_bytes]}	%{[zeek_cols][resp_pkts]}	%{[zeek_cols][resp_ip_bytes]}	%{[zeek_cols][tunnel_parents]}	%{[zeek_cols][orig_l2_addr]}	%{[zeek_cols][resp_l2_addr]}	%{[zeek_cols][community_id]}"
+            }
+          }
+
         } else if ([@metadata][zeek_fields_bitmap] == 27262975) {
-          # has MACs, but not VLANs
+          # conn.log has macs
           dissect {
             id => "dissect_zeek_conn_with_mac_fields"
             # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
@@ -125,8 +151,18 @@ filter {
             }
           }
 
+        } else if ([@metadata][zeek_fields_bitmap] == 41943039) {
+          # conn.log has vlans + community_id
+          dissect {
+            id => "dissect_zeek_conn_with_vlan_and_community_fields"
+            # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+            mapping => {
+              "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][proto]}	%{[zeek_cols][service]}	%{[zeek_cols][duration]}	%{[zeek_cols][orig_bytes]}	%{[zeek_cols][resp_bytes]}	%{[zeek_cols][conn_state]}	%{[zeek_cols][local_orig]}	%{[zeek_cols][local_resp]}	%{[zeek_cols][missed_bytes]}	%{[zeek_cols][history]}	%{[zeek_cols][orig_pkts]}	%{[zeek_cols][orig_ip_bytes]}	%{[zeek_cols][resp_pkts]}	%{[zeek_cols][resp_ip_bytes]}	%{[zeek_cols][tunnel_parents]}	%{[zeek_cols][vlan]}	%{[zeek_cols][inner_vlan]}	%{[zeek_cols][community_id]}"
+            }
+          }
+
         } else if ([@metadata][zeek_fields_bitmap] == 8388607) {
-          # has VLANs, but not MACs
+          # conn.log has vlans
           dissect {
             id => "dissect_zeek_conn_with_vlan_fields"
             # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
@@ -136,7 +172,17 @@ filter {
           }
 
         } else if ([@metadata][zeek_fields_bitmap] == 2097151) {
-          # has neither MACs nor VLANs
+          # conn.log has community_id
+          dissect {
+            id => "dissect_zeek_conn_with_community_fields"
+            # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+            mapping => {
+              "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][proto]}	%{[zeek_cols][service]}	%{[zeek_cols][duration]}	%{[zeek_cols][orig_bytes]}	%{[zeek_cols][resp_bytes]}	%{[zeek_cols][conn_state]}	%{[zeek_cols][local_orig]}	%{[zeek_cols][local_resp]}	%{[zeek_cols][missed_bytes]}	%{[zeek_cols][history]}	%{[zeek_cols][orig_pkts]}	%{[zeek_cols][orig_ip_bytes]}	%{[zeek_cols][resp_pkts]}	%{[zeek_cols][resp_ip_bytes]}	%{[zeek_cols][tunnel_parents]}	%{[zeek_cols][community_id]}"
+            }
+          }
+
+        } else if ([@metadata][zeek_fields_bitmap] == 2097151) {
+          # conn.log has no custom fields
           dissect {
             id => "dissect_zeek_conn_with_minimal_fields"
             # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
@@ -171,7 +217,7 @@ filter {
       }
       ruby {
         id => "ruby_zip_zeek_conn"
-        init => "$zeek_conn_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'proto', 'service', 'duration', 'orig_bytes', 'resp_bytes', 'conn_state', 'local_orig', 'local_resp', 'missed_bytes', 'history', 'orig_pkts', 'orig_ip_bytes', 'resp_pkts', 'resp_ip_bytes', 'tunnel_parents', 'vlan', 'inner_vlan', 'orig_l2_addr', 'resp_l2_addr']"
+        init => "$zeek_conn_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'proto', 'service', 'duration', 'orig_bytes', 'resp_bytes', 'conn_state', 'local_orig', 'local_resp', 'missed_bytes', 'history', 'orig_pkts', 'orig_ip_bytes', 'resp_pkts', 'resp_ip_bytes', 'tunnel_parents', 'vlan', 'inner_vlan', 'orig_l2_addr', 'resp_l2_addr', 'community_id' ]"
         code => "event.set('[zeek_cols]', $zeek_conn_field_names.zip(event.get('[message]')).to_h)"
       }
     }
@@ -1541,16 +1587,19 @@ filter {
     rename => { "[zeek_%{[source]}][proto]"         => "[zeek][proto]" }
     rename => { "[zeek_%{[source]}][service]"       => "[zeek][service]" }
     rename => { "[zeek_%{[source]}][user]"          => "[zeek][user]" }
+    rename => { "[zeek_%{[source]}][community_id]"  => "[zeek][community_id]" }
   }
 
   if ([zeek][orig_h]) { mutate { id => "mutate_add_field_zeek_srcIp"
-                                add_field => { "[srcIp]"   => "%{[zeek][orig_h]}" } } }
+                                 add_field => { "[srcIp]"   => "%{[zeek][orig_h]}" } } }
   if ([zeek][orig_p]) { mutate { id => "mutate_add_field_zeek_srcPort"
-                                add_field => { "[srcPort]" => "%{[zeek][orig_p]}" } } }
+                                 add_field => { "[srcPort]" => "%{[zeek][orig_p]}" } } }
   if ([zeek][resp_h]) { mutate { id => "mutate_add_field_zeek_dstIp"
-                                add_field => { "[dstIp]"   => "%{[zeek][resp_h]}" } } }
+                                 add_field => { "[dstIp]"   => "%{[zeek][resp_h]}" } } }
   if ([zeek][resp_p]) { mutate { id => "mutate_add_field_zeek_dstPort"
-                                add_field => { "[dstPort]" => "%{[zeek][resp_p]}" } } }
+                                 add_field => { "[dstPort]" => "%{[zeek][resp_p]}" } } }
+  if ([zeek][community_id]) { mutate { id => "mutate_add_field_zeek_communityId"
+                                       add_field => { "[communityId]" => "%{[zeek][community_id]}" } } }
 
   # if OUI lookup is requested, enable it
   mutate {
